--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -425,26 +425,6 @@ stages:
     parameters:
       inputName: Linux_musl_arm64
 
-  # Publish to the BAR
-  - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
-    - template: /eng/common/templates/job/publish-build-assets.yml
-      parameters:
-        dependsOn:
-          - Windows_build
-          - Windows_arm_build
-          - CodeSign_Xplat_MacOS_x64
-          - CodeSign_Xplat_Linux_x64
-          - CodeSign_Xplat_Linux_arm
-          - CodeSign_Xplat_Linux_arm64
-          - CodeSign_Xplat_Linux_musl_x64
-          - CodeSign_Xplat_Linux_musl_arm64
-        pool:
-          vmImage: vs2017-win2016
-        enablePublishUsingPipelines: ${{ variables._PublishUsingPipelines }}
-        enablePublishBuildArtifacts: true # publish artifacts/log files
-        # In addition to the depdencies, ensure the build was successful overall.
-        condition: and(succeeded(), succeeded('Code_check'), succeeded('Windows_Test'), succeeded('Windows_Templates_Test'), succeeded('MacOS_Test'), succeeded('Linux_Test'), succeeded('Source_Build'))
-
   # Test jobs
   - template: jobs/default-build.yml
     parameters:
@@ -597,6 +577,31 @@ stages:
         artifactName: Source_Build_Packages
         artifactType: Container
         parallel: true
+
+  # Publish to the BAR
+  - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
+    - template: /eng/common/templates/job/publish-build-assets.yml
+      parameters:
+        dependsOn:
+          - Windows_build
+          - Windows_arm_build
+          - CodeSign_Xplat_MacOS_x64
+          - CodeSign_Xplat_Linux_x64
+          - CodeSign_Xplat_Linux_arm
+          - CodeSign_Xplat_Linux_arm64
+          - CodeSign_Xplat_Linux_musl_x64
+          - CodeSign_Xplat_Linux_musl_arm64
+          # In addition to the dependencies above, ensure the build was successful overall.
+          - Code_check
+          - Linux_Test
+          - MacOS_Test
+          - Source_Build
+          - Windows_Templates_Test
+          - Windows_Test
+        pool:
+          vmImage: vs2017-win2016
+        enablePublishUsingPipelines: ${{ variables._PublishUsingPipelines }}
+        enablePublishBuildArtifacts: true # publish artifacts/log files
 
 - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
   - template: /eng/common/templates/post-build/post-build.yml
