Correct publication of loose .pdb files and use Arcade to publish installers

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -160,6 +160,7 @@ stages:
                 /p:AssetManifestFileName=aspnetcore-win-x64-x86.xml
                 $(_BuildArgs)
                 $(_PublishArgs)
+                /p:PublishInstallerBaseVersion=true
         displayName: Build Installers
 
       artifacts:
@@ -168,10 +169,6 @@ stages:
         publishOnError: true
       - name: Windows_Packages
         path: artifacts/packages/
-      - name: Windows_Symbols
-        path: artifacts/symbols/
-      - name: Windows_Installers
-        path: artifacts/installers/
 
   # Build Windows ARM
   - template: jobs/default-build.yml
@@ -200,8 +197,6 @@ stages:
         publishOnError: true
       - name: Windows_arm_Packages
         path: artifacts/packages/
-      - name: Windows_arm_Installers
-        path: artifacts/installers/
 
   # Build MacOS
   - template: jobs/default-build.yml
@@ -227,8 +222,6 @@ stages:
         publishOnError: true
       - name: MacOS_x64_Packages
         path: artifacts/packages/
-      - name: MacOS_x64_Installers
-        path: artifacts/installers/
   - template: jobs/codesign-xplat.yml
     parameters:
       inputName: MacOS_x64
@@ -289,8 +282,6 @@ stages:
         publishOnError: true
       - name: Linux_x64_Packages
         path: artifacts/packages/
-      - name: Linux_x64_Installers
-        path: artifacts/installers/
   - template: jobs/codesign-xplat.yml
     parameters:
       inputName: Linux_x64
@@ -320,8 +311,6 @@ stages:
         publishOnError: true
       - name: Linux_arm_Packages
         path: artifacts/packages/
-      - name: Linux_arm_Installers
-        path: artifacts/installers/
   - template: jobs/codesign-xplat.yml
     parameters:
       inputName: Linux_arm
@@ -351,8 +340,6 @@ stages:
         publishOnError: true
       - name: Linux_arm64_Packages
         path: artifacts/packages/
-      - name: Linux_arm64_Installers
-        path: artifacts/installers/
   - template: jobs/codesign-xplat.yml
     parameters:
       inputName: Linux_arm64
@@ -385,8 +372,6 @@ stages:
         publishOnError: true
       - name: Linux_musl_x64_Packages
         path: artifacts/packages/
-      - name: Linux_musl_x64_Installers
-        path: artifacts/installers/
   - template: jobs/codesign-xplat.yml
     parameters:
       inputName: Linux_musl_x64
@@ -419,8 +404,6 @@ stages:
         publishOnError: true
       - name: Linux_musl_arm64_Packages
         path: artifacts/packages/
-      - name: Linux_musl_arm64_Installers
-        path: artifacts/installers/
   - template: jobs/codesign-xplat.yml
     parameters:
       inputName: Linux_musl_arm64
@@ -608,3 +591,4 @@ stages:
     parameters:
       # See https://github.com/dotnet/arcade/issues/2871
       enableSymbolValidation: false
+      publishInstallersAndChecksums: true
