--- a/eng/Publishing.props
+++ b/eng/Publishing.props
@@ -46,6 +46,7 @@
         <ExcludeFromManifest>true</ExcludeFromManifest>
         <IsShipping>false</IsShipping>
         <ManifestArtifactData>ShipInstaller=dotnetcli</ManifestArtifactData>
+        <PublishFlatContainer>true</PublishFlatContainer>
         <RelativeBlobPath>$(_UploadPathRoot)/%(_InstallersToPublish.UploadPathSegment)/$(_PackageVersion)/%(Filename)%(Extension)</RelativeBlobPath>
       </ItemsToPushToBlobFeed>
     </ItemGroup>
